--- a/templates/index.html
+++ b/templates/index.html
@@ -135,14 +135,14 @@
                 <div class="feed">
                     <h2>Original</h2>
                     <img
-                        src="{{ url_for('video_feed') }}"
+                        src="{{ url_for('/video/video_feed') }}"
                         alt="Original Feed"
                     />
                 </div>
                 <div class="feed">
                     <h2>Detection</h2>
                     <img
-                        src="{{ url_for('video_feed_detected') }}"
+                        src="{{ url_for('/video/detected_feed') }}"
                         alt="Detection Feed"
                     />
                 </div>
