--- a/templates/index.html
+++ b/templates/index.html
@@ -135,7 +135,7 @@
                 <div class="feed">
                     <h2>Original</h2>
                     <img
-                        src="{{ url_for('/video/video_feed') }}"
+                        src="{{ url_for('/video/raw_feed') }}"
                         alt="Original Feed"
                     />
                 </div>
